ChangeLog of JSch
====================================================================
Last modified: Thu Feb  2 09:04:04 UTC 2012

	
Changes since version 0.1.45:
- bugfix: in the agent forwarding mode, "ssh-add -l" on the remote
          will freeze.                                                 FIXED
- bugfix: requests should not be sent to the closed channel.           FIXED
- bugfix: ChannelShell#setAgentForwarding(true) will cause
          resource leaks.                                              FIXED
- change: for the efficiency, channel opening will be delayed
          in local port forwarding.
- change: added examples/Sudo.java to demonstrate sudo on exec channel.
- change: authentication trials will be failed at 6 failures by the default.
- change: updating copyright messages; 2011 -> 2012
- feature: added JSch#setIdentityRepository(IdentityRepository irepo) to
	   integrate with jsch-agent-proxy.

	
Changes since version 0.1.44:
- bugfix: fields referred by multiple threads simultaneously should be
	  volatile.                                                    FIXED 
- bugfix: use local window size offered by the remote in sftp put.
                                                                       FIXED 
- bugfix: SftpProgressMonitor#init was not invoked in sftp-put
	  for input-stream.                                            FIXED 
- bugfix: sftp protocol version 3, 4 and 5 should allow only 
	  UTF-8 encoding.                                              FIXED 
- bugfix: Channel Subsystem had failed to set X forwarding flag.
                                                                       FIXED 
- bugfix: Channel X11 had leaked some resources.
                                                                       FIXED 
- bugfix: packet compression may break sessions
	  in some case(transferring deflated data).                    FIXED 
- bugfix: failed to set dev-null for logger