@@ -1,6 +1,15 @@
 ChangeLog of JSch
 ====================================================================
-Last modified: Thu Feb  2 09:04:04 UTC 2012
+Last modified: Wed Apr  4 05:48:25 UTC 2012
+
+	
+Changes since version 0.1.46:
+- bugfix: failed to initialize channels for the stream forwarding.     FIXED
+- change: Session#getHostKey() will return the given hostkey
+	  even if session is not established.
+- change: Logger will record additional messages about algorithm negotiations.
+- feature: added ChannelSftp#ls(String path, LsEntrySelector selector) method.
+- feature: added IdentityRepository#{getName(),getStatus()} methods.
 
 	
 Changes since version 0.1.45:
